--- a/projects/android/app/src/main/res/values-vi/strings.xml
+++ b/projects/android/app/src/main/res/values-vi/strings.xml
@@ -161,6 +161,8 @@
     <string name="create_public_room_text">Host Game Công Khai</string>
     <string name="private_rooms_text">Game Riêng Tư</string>
     <string name="lobby_page_title">Danh sách Online Servers</string>
+    <string name="new_feature_title">Tính năng mới</string>
+    <string name="lobby_feature_msg">Internet Multiplayer hiện đã cho phép người chơi tạo phòng online công khai, ai cũng tìm được và có thể tham gia cùng.</string>
 
     <!--
     <string name="appwarp_connect_error_msg">Failed to connect to Game Server using Google Account. Error code=%1$d. Please try again later.</string>
