--- a/projects/android/app/src/main/res/values/strings.xml
+++ b/projects/android/app/src/main/res/values/strings.xml
@@ -174,6 +174,8 @@
     <string name="new_feature_title">New feature</string>
     <string name="lobby_feature_msg">Internet Multiplayer now allows you to host a public game that anyone can see and join.</string>
     <string name="connected_via_proxy">The system detected that you are only able to connect to remote player via Relay Server instead of direct p2p. You may experience limited bandwidth.</string>
+    <string name="skip_autosearch_on_resume_msg">Do you want to skip the auto search process that would start whenever you enter this page?</string>
+    <string name="enable_autosearch_on_resume">Start auto search if Select Game list is empty</string>
 
     <!--
     <string name="appwarp_connect_error_msg">Failed to connect to Game Server using Google Account. Error code=%1$d. Please try again later.</string>
