--- a/projects/android/app/src/main/res/values/strings.xml
+++ b/projects/android/app/src/main/res/values/strings.xml
@@ -16,6 +16,8 @@
     <string name="ok">OK</string>
     <string name="reset">Reset</string>
     <string name="start">Start</string>
+    <string name="new_item">New</string>
+    <string name="edit_item">Edit</string>
     <string name="donate">Remove Ads</string>
     <string name="delete_invitation_msg">Are you sure want to delete this invitation?</string>
     <string name="file_exist_title">File exists</string>
@@ -152,6 +154,7 @@
     <string name="google_match_invite_postprocessing">Waiting for 2nd player ...</string>
     <string name="google_signing_in">Logging in with Google ...</string>
     <string name="name_field">Name:</string>
+    <string name="code_field">Code:</string>
     <string name="wifi_direct_not_supported">Wifi Direct is not supported on this device.</string>
     <string name="wifi_direct_internal_err_msg">Wifi Direct encountered internal driver error.</string>
     <string name="wifi_direct_creating">Setting up Wifi Direct Server ...</string>
@@ -180,6 +183,10 @@
     <string name="enable_autosearch_on_resume">Start auto search if Select Game list is empty</string>
     <string name="public_rooms_text">Public Servers</string>
     <string name="game_speed">Game Speed</string>
+    <string name="cheats" translatable="false">Cheats</string>
+    <string name="too_many_cheats_err">You have reached max number of cheat codes allowed for one game.</string>
+    <string name="invalid_cheat_code_err">Invalid cheat code.</string>
+    <string name="invalid_cheat_code_detailed_err">Invalid cheat code %1$s.</string>
     <!--
     <string name="appwarp_connect_error_msg">Failed to connect to Game Server using Google Account. Error code=%1$d. Please try again later.</string>
     <string name="appwarp_auth_error_msg">Failed to connect to Game Server using Google Account. Probably you already logged in on another device. Please log out from that device first.</string>
