--- a/projects/android/app/src/main/res/values-vi/strings.xml
+++ b/projects/android/app/src/main/res/values-vi/strings.xml
@@ -78,6 +78,10 @@
     <string name="ui_controls_visiable_lbl">Hiển thị nút điều khiển trên màn hình</string>
     <string name="game_fullscreen_lbl">Hiển thị game toàn màn hình</string>
     <string name="display_filter_lbl">Hiệu ứng lọc</string>
+    <string name="sound_settings_lbl">Âm thanh</string>
+    <string name="controller_settings_lbl">Điểu khiển</string>
+    <string name="video_settings_lbl">Hình ảnh</string>
+    <string name="misc_settings_lbl">Misc</string>
     <string name="loading_fb_profile_msg">Đang tải facebook profile ...</string>
     <string name="loading_profile_err">Tải facebook profile bị lỗi</string>
     <string name="title_invitations">Danh sách lời mời</string>
